feat(create-post): add new page and add paddding in all view in desktop

--- a/src/app/features/posts/components/post-detail/post-detail.component.html
+++ b/src/app/features/posts/components/post-detail/post-detail.component.html
@@ -24,7 +24,7 @@
     * office: 
  -->
 
- <main class="main">
+<main class="main">
     <!-- Card -->
     <div class="left-section">
         <button mat-raised-button (click)="goBack()">
@@ -140,5 +140,6 @@
     ></ngx-doc-viewer>
 
     <!-- Shimmer -->
+    <!-- TODO: Fix width and height -->
     <!-- <ngx-shimmer-loading height="90vh" width="100%" class="doc-shimmer" *ngIf="isLoading"></ngx-shimmer-loading> -->
 </main>
