--- a/src/app/features/homepage/components/results/results.component.scss
+++ b/src/app/features/homepage/components/results/results.component.scss
@@ -4,7 +4,7 @@
     background-size: contain;
     // background-attachment: fixed;
 
-    padding: 4rem 1rem 1rem 1rem;
+    padding: 4rem 4rem 1rem 4rem;
     
     min-height: calc(100% - 4rem - 1rem); // 4rem = navbar height
 }
@@ -266,4 +266,10 @@
 
 .no-results__title {
     font-size: 1.5rem;
+}
+
+@media (max-width: 48rem) {
+    :host {
+        padding: 4rem 1rem 1rem 1rem;
+    }
 }
