--- a/src/app/shared/components/navbar/navbar.component.scss
+++ b/src/app/shared/components/navbar/navbar.component.scss
@@ -12,7 +12,7 @@
     justify-content: space-between;
     align-items: center;
     
-    padding: 0.5rem 1rem;
+    padding: 0.5rem 4rem;
     
     ul {
         list-style-type: none;
@@ -81,4 +81,10 @@
     min-width: auto;
     padding: 0.2em 0.5em;
     border-radius: 10px;
+}
+
+@media (max-width: 48rem) {
+    .navbar {
+        padding: 0.5rem 1rem;
+    }
 }
