--- a/src/app/features/posts/components/create-post/create-post.component.html
+++ b/src/app/features/posts/components/create-post/create-post.component.html
@@ -3,15 +3,15 @@
   <mat-card class="card">
     <mat-card-title>Crear publicación</mat-card-title>  
 
-    <form>
+    <form [formGroup]="form">
       <mat-form-field appearance="outline" class="title-field">
         <mat-label>Título</mat-label>
-        <input matInput placeholder="Título">
+        <input matInput placeholder="Título" formControlName="title">
       </mat-form-field>
       
       <mat-form-field appearance="outline" class="select-field">
         <mat-label>Nivel académico</mat-label>
-        <mat-select>
+        <mat-select formControlName="academicLevel">
           <mat-option>
             <ngx-mat-select-search></ngx-mat-select-search>
           </mat-option>
@@ -23,7 +23,7 @@
       
       <mat-form-field appearance="outline" class="select-field">
         <mat-label>Asignatura</mat-label>
-        <mat-select>
+        <mat-select formControlName="subject">
           <mat-option>
             <ngx-mat-select-search></ngx-mat-select-search>
           </mat-option>
@@ -35,7 +35,7 @@
       
       <mat-form-field appearance="outline" class="select-field">
         <mat-label>Eje</mat-label>
-        <mat-select>
+        <mat-select formControlName="axis">
           <mat-option>
             <ngx-mat-select-search></ngx-mat-select-search>
           </mat-option>
@@ -83,21 +83,37 @@
 
       <mat-form-field class="description-textarea" appearance="outline">
         <mat-label>Descripción</mat-label>
-        <textarea matInput cdkTextareaAutosize cdkAutosizeMinRows="3" cdkAutosizeMaxRows="20"></textarea>
+        <textarea matInput 
+        formControlName="description"
+          cdkTextareaAutosize cdkAutosizeMinRows="3" cdkAutosizeMaxRows="20">
+        </textarea>
       </mat-form-field>
     </form>
   </mat-card>
   
   <!-- Upload section -->
   <mat-card>
-    <div class="upload-section">
-      <div class="flex_justify_center gap-05">
-        <div class="file-icon pdf-style">.PDF</div>
-        <div class="file-icon doc-style">.DOC</div>
-        <div class="file-icon ppt-style">.XLS</div>
-        <div class="file-icon xls-style">.PPT</div>
-      </div>
-      <p>Arrastra o has click aquí para subir un archivo</p>
+    <div class="upload-section"
+      unselectable="on"
+      matRipple
+      appDragAndDropFile
+      (fileDropped)="onFileDroped($event)"
+      (click)="inputFile.click()">
+        <!-- TODO: add drop icon -->
+        <div class="flex_center flex_column">
+          <mat-icon>upload_file</mat-icon>
+          <h2>
+            Arrastra los archivos aquí
+          </h2>
+        </div>
+        <div class="flex_justify_center gap-05">
+          <div class="file-icon pdf-style">.pdf</div>
+          <div class="file-icon doc-style">.doc</div>
+          <div class="file-icon ppt-style">.xls</div>
+          <div class="file-icon xls-style">.ppt</div>
+        </div>
+        <p>o has click para buscar en tu dispositivo</p>
+        <input type="file" multiple #inputFile>
     </div>
 
     <div class="flex_column gap-05">
