--- a/src/app/features/posts/components/create-post/create-post.component.scss
+++ b/src/app/features/posts/components/create-post/create-post.component.scss
@@ -63,10 +63,12 @@
     gap: 1rem;
     
     margin-bottom: 1rem;
-    padding: 2rem 1rem;
-    border: 1px dashed #8b8b8b;
+    padding: 1.5rem 0.5rem;
+    border: 1px dashed var(--dark-text);
 
     border-radius: 5px;
+
+    cursor: pointer;
 
     p {
         margin: 0;
@@ -74,8 +76,8 @@
         font-weight: 600;
     }
 
-    > div {
-        filter: opacity(0.5);
+    input {
+        display: none;
     }
 }
 
@@ -93,7 +95,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0 1rem;
+    padding: 0 0.5rem 0 1rem;
 
     font-weight: 500;
 
@@ -107,10 +109,12 @@
 
     > div {
         display: flex;
+        align-items: center;
+        justify-content: center;
     }
 
     .action-doc {
-        padding: 0 0.5rem;
+        padding-left: 0.5rem;
     }
 }
 
