--- a/src/app/features/posts/components/create-post/create-post.component.html
+++ b/src/app/features/posts/components/create-post/create-post.component.html
@@ -1,110 +1,86 @@
 <main class="main">
-  <!-- Form -->
-  <mat-card class="card">
-    <mat-card-title>Crear publicación</mat-card-title>  
-
-    <form [formGroup]="form">
-      <mat-form-field appearance="outline" class="title-field">
-        <mat-label>Título</mat-label>
-        <input matInput placeholder="Título" formControlName="title">
-      </mat-form-field>
-      
-      <mat-form-field appearance="outline" class="select-field">
-        <mat-label>Nivel académico</mat-label>
-        <mat-select formControlName="academicLevel">
-          <mat-option>
-            <ngx-mat-select-search></ngx-mat-select-search>
-          </mat-option>
-          <mat-option>
-            item1
-          </mat-option>
-        </mat-select>
-      </mat-form-field>
-      
-      <mat-form-field appearance="outline" class="select-field">
-        <mat-label>Asignatura</mat-label>
-        <mat-select formControlName="subject">
-          <mat-option>
-            <ngx-mat-select-search></ngx-mat-select-search>
-          </mat-option>
-          <mat-option>
-            item1
-          </mat-option>
-        </mat-select>
-      </mat-form-field>
-      
-      <mat-form-field appearance="outline" class="select-field">
-        <mat-label>Eje</mat-label>
-        <mat-select formControlName="axis">
-          <mat-option>
-            <ngx-mat-select-search></ngx-mat-select-search>
-          </mat-option>
-          <mat-option>
-            item1
-          </mat-option>
-        </mat-select>
-      </mat-form-field>
-
-      <!-- <div class="categories">
-        <p>Categorías</p>
-        <div>
-          <app-rounded-select-search
-            class="filter"
-            [list]="academicLevelsList"
-            [control]="academicLevelControl"
-            [loading]="isAcademicLevelsLoading"
-            buttonText="Nivel Académico"
-            bgColor="var(--primary-color)"
-            textColor="var(--light-text)"
-            placeholder="Buscar nivel académico">
-          </app-rounded-select-search>
-          <app-rounded-select-search
-            class="filter"
-            [list]="subjectList"
-            [control]="subjectControl"
-            [loading]="isSubjectsLoading"
-            buttonText="Asignatura"
-            bgColor="var(--warn-color)"
-            textColor="var(--light-text)"
-            placeholder="Buscar asignatura">
-          </app-rounded-select-search>
-          <app-rounded-select-search
-            class="filter"
-            [list]="axesList"
-            [control]="axisControl"
-            [loading]="isAxesLoading"
-            buttonText="Eje"
-            bgColor="var(--purple-color)"
-            textColor="var(--light-text)"
-            placeholder="Buscar eje">
-          </app-rounded-select-search>
-        </div>
-      </div> -->
-
-      <mat-form-field class="description-textarea" appearance="outline">
-        <mat-label>Descripción</mat-label>
-        <textarea matInput 
-        formControlName="description"
-          cdkTextareaAutosize cdkAutosizeMinRows="3" cdkAutosizeMaxRows="20">
-        </textarea>
-      </mat-form-field>
-    </form>
-  </mat-card>
+  <div>
+    <button mat-raised-button (click)="goBack()" class="back-button">
+      <mat-icon>arrow_back</mat-icon>
+      <span>Volver a resultados</span>
+    </button>
+    <!-- Form -->
+    <mat-card class="card">
+      <mat-card-title>Crear publicación</mat-card-title>  
   
+      <form [formGroup]="form">
+        <mat-form-field appearance="outline" class="title-field">
+          <mat-label>Título</mat-label>
+          <input matInput placeholder="Título" formControlName="title">
+        </mat-form-field>
+        
+        <mat-form-field appearance="outline" class="select-field">
+          <mat-label>Nivel académico</mat-label>
+          <mat-select formControlName="academicLevel">
+            <mat-option>
+              <ngx-mat-select-search></ngx-mat-select-search>
+            </mat-option>
+            <mat-option>
+              item1
+            </mat-option>
+          </mat-select>
+        </mat-form-field>
+        
+        <mat-form-field appearance="outline" class="select-field">
+          <mat-label>Asignatura</mat-label>
+          <mat-select formControlName="subject">
+            <mat-option>
+              <ngx-mat-select-search></ngx-mat-select-search>
+            </mat-option>
+            <mat-option>
+              item1
+            </mat-option>
+          </mat-select>
+        </mat-form-field>
+        
+        <mat-form-field appearance="outline" class="select-field">
+          <mat-label>Eje</mat-label>
+          <mat-select formControlName="axis">
+            <mat-option>
+              <ngx-mat-select-search></ngx-mat-select-search>
+            </mat-option>
+            <mat-option>
+              item1
+            </mat-option>
+          </mat-select>
+        </mat-form-field>
+  
+        <mat-form-field class="description-textarea" appearance="outline">
+          <mat-label>Descripción</mat-label>
+          <textarea matInput 
+          formControlName="description"
+            cdkTextareaAutosize cdkAutosizeMinRows="3" cdkAutosizeMaxRows="20">
+          </textarea>
+        </mat-form-field>
+
+        <div class="flex_justify_end">
+          <button type="submit" mat-raised-button color="primary">
+            <mat-icon>save</mat-icon>
+            <span>Guardar</span>
+          </button>
+        </div>
+      </form>
+    </mat-card>
+  </div>
+
   <!-- Upload section -->
-  <mat-card>
+  <mat-card class="right-side">
     <div class="upload-section"
-      unselectable="on"
       matRipple
       appDragAndDropFile
       (fileDropped)="onFileDroped($event)"
       (click)="inputFile.click()">
         <!-- TODO: add drop icon -->
-        <div class="flex_center flex_column">
-          <mat-icon>upload_file</mat-icon>
+        <div class="flex_center">
           <h2>
             Arrastra los archivos aquí
           </h2>
+          <mat-icon>upload_file</mat-icon>
         </div>
         <div class="flex_justify_center gap-05">
           <div class="file-icon pdf-style">.pdf</div>
@@ -113,29 +89,34 @@
           <div class="file-icon xls-style">.ppt</div>
         </div>
         <p>o has click para buscar en tu dispositivo</p>
-        <input type="file" multiple #inputFile>
+        <input type="file" (change)="onFileSelected($event)"multiple #inputFile>
     </div>
 
     <div class="flex_column gap-05">
       <div
-        class="document"
-        *ngFor="let doc of post.suporting_material; index as i"
-        unselectable="on"
-        matRipple
-        [ngClass]="i === 0 ? (doc|getDocType:docTypes)+'-style' : ''">
-          <span>{{ doc|getDocName }}</span>
-          <div>
-            <button
-              class="action-doc"
-              mat-icon-button>
-                <mat-icon>download</mat-icon>
-            </button>
-            <button
-              class="action-doc"
-              mat-icon-button>
-                <mat-icon>cancel</mat-icon>
-            </button>
+        class="document {{doc.ext}}-style"
+        *ngFor="let doc of documentList; index as i"
+        matRipple>
+        <span>{{ doc.name }}</span>
+        <div>
+          <button
+            class="document-button"
+            *ngIf="doc.isUploadComplete"
+            (click)="download(doc.url)"
+            mat-icon-button>
+            <mat-icon>download</mat-icon>
+          </button>
+          <button
+            class="document-button"
+            *ngIf="doc.isUploadComplete"
+            (click)="removeFile(doc)"
+            mat-icon-button>
+              <mat-icon>cancel</mat-icon>
+          </button>
+          <div class="spinner-container" *ngIf="!doc.isUploadComplete">
+            <div class="spinner"></div>
           </div>
+        </div>
       </div>
   </div>
   </mat-card>
