--- a/src/app/features/posts/components/create-post/create-post.component.scss
+++ b/src/app/features/posts/components/create-post/create-post.component.scss
@@ -17,11 +17,21 @@
     justify-content: space-between;
 }
 
-.card {
-    flex-grow: 2;
+.back-button {
+    margin-bottom: 0.5rem;
+}
 
+.right-side {
+    flex-grow: 2;
+}
+
+.card {
     mat-card-title {
         margin: 1rem 0;
+    }
+
+    form {
+        max-width: 50rem;
     }
 }
 
@@ -69,6 +79,7 @@
     border-radius: 5px;
 
     cursor: pointer;
+    user-select: none;
 
     p {
         margin: 0;
@@ -78,6 +89,10 @@
 
     input {
         display: none;
+    }
+
+    h2 {
+        margin: 0;
     }
 }
 
@@ -95,9 +110,11 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0 0.5rem 0 1rem;
+    padding: 0 1rem;
 
     font-weight: 500;
+
+    user-select: none;
 
     cursor: pointer;
 
@@ -113,8 +130,8 @@
         justify-content: center;
     }
 
-    .action-doc {
-        padding-left: 0.5rem;
+    .document-button {
+        width: 30px;
     }
 }
 
@@ -122,20 +139,44 @@
     color: var(--light-text);
     background-color: var(--warn-color);
 }
-.doc-style {
+.doc-style, .docx-style {
     color: var(--light-text);
     background-color: var(--primary-color);
 }
-.ppt-style {
+.ppt-style, .pptx-style {
     color: var(--light-text);
     // TODO: Find orange color
     background-color: var(--accent-color);
 }
-.xls-style {
+.xls-style, .xlsx-style {
     color: var(--light-text);
     // TODO: Find green light color
     background-color: var(--green-dark-color);
 }
+
+.spinner-container {
+    margin: 0.5rem;
+}
+
+.spinner {
+    border: 3px solid rgba(0, 0, 0, 0);
+    width: 1rem;
+    height: 1rem;
+    border-radius: 50%;
+    border-left-color: var(--light-text);
+  
+    animation: spin 1s ease infinite;
+  }
+  
+  @keyframes spin {
+    0% {
+      transform: rotate(0deg);
+    }
+  
+    100% {
+      transform: rotate(360deg);
+    }
+  }
 
 // Mobile
 @media (max-width: 48rem) {
