--- a/src/assets/styles/_index.scss
+++ b/src/assets/styles/_index.scss
@@ -3,6 +3,7 @@
 @import './helpers/display';
 @import './helpers/misc';
 @import './helpers/box-model';
+@import './material/overloads';
 
 // Typography
 // * {
